<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/promision_24dp"
            android:title="@string/promision" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_last_page_black_24dp"
            android:title="@string/lastsession" />
        <item
            android:id="@+id/trying"
            android:icon="@drawable/ic_last_page_black_24dp"
            android:title="@string/log"/>
    </group>
</menu>
