<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"/>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_istisharaty"
            android:icon="@drawable/ic_question_answer_black_24dp"
            android:title="@string/estsharah" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_sentiment_satisfied_black_24dp"
            android:title="@string/mashaeer" />
    <item
        android:id="@+id/nav_maqala"
        android:title="@string/maqalat"
        android:icon="@drawable/ic_border_color_black_24dp"/>




</menu>
