<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.estshara.IstsharaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="139dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/logo2" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="139dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/logoo" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:text="@string/estsharah"
        android:textAlignment="center"
        android:textColor="#F0F3F6"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:text="@string/estsharah" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="#3F51B5"
        android:text="@string/String5"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        tools:text="@string/String5" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="21dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background1">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/igtmaa" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Mihnah" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nafseh" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/osarah" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sehaa" />

        </RadioGroup>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="286dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background1"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/text1"
            android:inputType="textMultiLine"
            android:visibility="visible"
            tools:visibility="visible" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="21dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="@string/irsal" />

</LinearLayout>