<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.tu.mostshar11.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">


    </fragment>


    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.tu.mostshar11.ui.gallery.GalleryFragment"
        android:label="@string/promision"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.tu.mostshar11.ui.slideshow.SlideshowFragment"
        android:label="@string/lastsession"
        tools:layout="@layout/fragment_slideshow" />
   <!-- <activity
        android:id="@+id/trying"
        android:name="com.tu.mostshar11.activity1.TryingActivity"
        android:label="@string/log"
        tools:layout="@layout/activity_trying"/>-->
</navigation>