<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">
<LinearLayout
android:id="@+id/linearLayout"
android:layout_width="403dp"
android:layout_height="139dp"
android:orientation="horizontal">

<ImageView
    android:id="@+id/imageView"
    android:layout_width="wrap_content"
    android:layout_height="139dp"
    android:layout_weight="1"
    app:srcCompat="@mipmap/logo2" />

<ImageView
    android:id="@+id/imageView2"
    android:layout_width="wrap_content"
    android:layout_height="139dp"
    android:layout_weight="1"
    app:srcCompat="@mipmap/logoo" />
</LinearLayout>

<TextView
android:id="@+id/textView"
android:layout_width="match_parent"
android:layout_height="48dp"
android:background="#009688"
android:text="@string/log"
android:textAlignment="center"
android:textColor="#FFFFFF"
android:textSize="24sp" />

<EditText
android:id="@+id/email"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:ems="10"
android:hint="@string/Name"
android:inputType="textEmailAddress"
android:textAlignment="center" />

<EditText
android:id="@+id/password"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:ems="10"
android:hint="كلمة المرور"
android:inputType="textPassword"
android:textAlignment="center" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/usertype"
            android:textAlignment="viewEnd"
            tools:text="@string/usertype" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="#3F51B5"
        android:text="    "
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="273dp"
        android:layout_height="262dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="60dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:background="#2196F3"

            android:text="@string/button1"
            android:textColor="#F1F3F2"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="17dp" />

        <Button
            android:id="@+id/btn_sign"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:background="#2196F3"

            android:text="@string/button3"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />
    </LinearLayout>
    </LinearLayout>